jenkins/jenkins-operator/deploy/service_account.yaml
---
apiVersion: v1
kind: Namespace
metadata:
   name: jenkins
   labels:
     name: jenkins
