jenkins/jenkins-operator/deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  namespace: jenkins
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: jenkins.psit.xxxxxxxx.net
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins-operator-example
          servicePort: 8080
